--- a/e-commerce coffe/index.html
+++ b/e-commerce coffe/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Clove and Coffe</title>
 </head>
+    <!--Cabeçalho-->
 <body>
     <div class="header">
         <h1>What's the best coffe you've ever had ?</h1>
         <h3>You'll have the answer to that question after you've had our coffe.</h3>
     </div>
+
+    <!--Area de produtos 1-->
+
     <div class="main-1">
         <div class="product">
             <img class="image-product" src="Imagens/produtos/Classic.jpeg" alt="Café clássico">
@@ -34,10 +38,16 @@
             <button class="coffe_btn">U$ 35,00</button>
         </div>
     </div>
+
+    <!--Banner com frase 1-->
+
     <div class="main-2">
         <h1>Clove and Coffe</h1>
         <h3>Your day starts here</h3>
     </div>
+
+    <!--Area de produtos 2-->
+
     <div class="main-3">
         <div class="product">
             <img class="image-product" src="Imagens/produtos/Autumn folds.jpeg" alt="Sandwich">
@@ -58,7 +68,44 @@
             <img class="image-product" src="Imagens/produtos/strawberries bloom.jpeg" alt=" sobremesa de morango">
             <label class="coffe_name">Strawberries Bloom</label>
             <button class="coffe_btn">U$ 20,00</button>
+        </div>
     </div>
+
+    <!--Banner com frase 2-->
+
+        <div class="main-4">
+            <h1>We are beyond an ordinary coffee shop</h1>
+            <h3>You can consider us your second home</h3>
+        </div>
+
+    <!--Rodapé com redes sociais-->
+
+        <div class="footer">
+
+            <h2>Please don't forget to visit our social networks, always stay up to date with our news</h2>
+            <div class="social_medias">
+                <div>
+                <img id="facebook" src="Imagens/icones/icons8-facebook-50.png" alt="facebook-icon"><br>
+                <label for="facebook">@Clove and coffe</label>
+                </div>
+
+                <div>
+                <img id="instagram" src="Imagens/icones/icons8-instagram-50.png" alt="instagram-icon"><br>
+                <label for="instagram">@clove_coffe</label>
+                </div>
+
+                <div>
+                <img id="youtube" src="Imagens/icones/icons8-reproduzir-youtube-50.png" alt="youtube-icon"><br>
+                <label for="youtube">Youtube/clove and coffe.com</label>
+                </div>
+
+                <div>
+                    <img id="twitter" src="Imagens/icones/icons8-twitter-50.png" alt="twitter-icon"><br>
+                    <label for="twitter">@clove_coffe</label>
+                </div>
+            </div>
+
+        </div>
     
 </body>
 </html>
